--- a/men.html
+++ b/men.html
@@ -2,385 +2,160 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Gallery</title>
+    <title>Men's Section</title>
     <style>
         body {
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            font-family: Arial, sans-serif;
         }
-
-        .image-container {
-            width: 100%;
+        .container {
+            padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+        }
+        .gallery {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            align-items: center;
-            padding: 10px;
-            box-sizing: border-box;
         }
-
-        .image-container div {
-            flex: 1 1 calc(25% - 20px); /* Adjust percentage and margin for desired layout */
+        .gallery div {
             margin: 10px;
-            max-width: calc(25% - 20px);
-            box-sizing: border-box;
         }
-
-        .image-container img {
-            width: 100%;
+        .gallery img {
+            max-width: 100%;
             height: auto;
-            object-fit: contain;
-        }
-
-        .close-btn {
-            position: fixed;
-            top: 10px;
-            right: 10px;
-            color: white;
-            font-size: 24px;
-            cursor: pointer;
-            z-index: 10000;
-        }
-
-        @media (max-width: 768px) {
-            .image-container div {
-                flex: 1 1 calc(50% - 20px); /* Adjust layout for tablets */
-                max-width: calc(50% - 20px);
-            }
-        }
-
-        @media (max-width: 480px) {
-            .image-container div {
-                flex: 1 1 calc(100% - 20px); /* Adjust layout for mobile phones */
-                max-width: calc(100% - 20px);
-            }
         }
     </style>
 </head>
-
 <body>
-
-    <div class="shop-now-interface" id="shop-now-interface">
-        <!-- Men-specific content here -->
+    <div class="container">
         <h1>Welcome to the Men's Section!</h1>
         <p>Explore our collection for men.</p>
-    </div>
-     <div>
-            <img src="./img 101.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 102.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 103.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 104.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 105.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 106.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 107.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 108.jpg" alt="">
-            <p>Q - STAR
-            
-Distinctive sub-brands under the esteemed Umbrella of Libas e Yousaf. 
-
-Q - STAR  showcases a harmonious blend of classic and avant-garde fashion, 
- These Articles embodies dynamic and trend-setting Colors. Elevate your wardrobe with this sub-brand, where style meets individuality, and sartorial excellence is redefined within the legacy of #Libas-e-Yousaf •••
- #Qstar
-#Libasyousaf
-Season
-SUMMER (wash’n wear)
-Price PKR 2530/- Only 
-🏷Tag Price 5460/-
-(Without delivery)
-
-Package Includes
-Libas-e-Yousuf branded box 
-Fabric Length 4 Meters
-Width 52-54 Inches 
-Brand tags, cards and ribbon
-Metal molded buttons 
-100% guarantee for color and fabric</p>
-        </div>
-        <div>
-            <img src="./img 109.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 110.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 111.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 112.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 113.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 114.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 115.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 116.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 117.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 118.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 119.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 120.jpg" alt="">
-        </div>
-    <div>
-            <img src="./img 121.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 122.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 123.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 124.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 125.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 126.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 127.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 128.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 129.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 130.jpg" alt="">
-        </div>
-    <div>
-            <img src="./img 131.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 132.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 133.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 134.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 135.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 136.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 137.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 138.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 139.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 140.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 141.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 142.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 143.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 144.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 145.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 146.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 147.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 148.jpg" alt="">
-        </div>
-        <div>
-            
-            <img src="./img 149.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 150.jpg" alt="">
-        </div>
-     <div>
-            <img src="./img 151.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 152.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 153.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 154.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 155.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 156.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 157.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 158.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 159.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 160.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 161.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 162.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 163.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 164.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 165.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 166.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 167.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 168.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 169.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 170.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 171.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 172.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 173.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 174.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 175.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 176.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 177.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 178.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 179.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 180.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 181.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 182.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 183.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 184.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 185.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 186.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 187.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 188.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 189.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 190.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 191.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 192.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 193.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 194.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 195.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 196.jpg" alt="">
-        </div>
-        <div>
-            <img src="./img 197.jpg" alt="">
-        </div>
+        <div class="gallery">
+            <div><img src="./img 101.jpg" alt=""></div>
+            <div><img src="./img 102.jpg" alt=""></div>
+            <div><img src="./img 103.jpg" alt=""></div>
+            <div><img src="./img 104.jpg" alt=""></div>
+            <div><img src="./img 105.jpg" alt=""></div>
+            <div><img src="./img 106.jpg" alt=""></div>
+            <div><img src="./img 107.jpg" alt=""></div>
+            <div>
+                <img src="./img 108.jpg" alt="">
+                <p>Q - STAR</p>
+                <p>
+                    Distinctive sub-brands under the esteemed Umbrella of Libas e Yousaf.<br>
+                    Q - STAR showcases a harmonious blend of classic and avant-garde fashion. 
+                    These Articles embody dynamic and trend-setting colors. Elevate your wardrobe with this sub-brand, where style meets individuality, and sartorial excellence is redefined within the legacy of #Libas-e-Yousaf •••
+                    #Qstar #Libasyousaf Season SUMMER (wash’n wear) Price PKR 2530/- Only 🏷Tag Price 5460/-
+                    (Without delivery)
+                    <br><br>
+                    Package Includes:
+                    <ul>
+                        <li>Libas-e-Yousuf branded box</li>
+                        <li>Fabric Length 4 Meters</li>
+                        <li>Width 52-54 Inches</li>
+                        <li>Brand tags, cards and ribbon</li>
+                        <li>Metal molded buttons</li>
+                        <li>100% guarantee for color and fabric</li>
+                    </ul>
+                </p>
+            </div>
+            <div><img src="./img 109.jpg" alt=""></div>
+            <div><img src="./img 110.jpg" alt=""></div>
+            <div><img src="./img 111.jpg" alt=""></div>
+            <div><img src="./img 112.jpg" alt=""></div>
+            <div><img src="./img 113.jpg" alt=""></div>
+            <div><img src="./img 114.jpg" alt=""></div>
+            <div><img src="./img 115.jpg" alt=""></div>
+            <div><img src="./img 116.jpg" alt=""></div>
+            <div><img src="./img 117.jpg" alt=""></div>
+            <div><img src="./img 118.jpg" alt=""></div>
+            <div><img src="./img 119.jpg" alt=""></div>
+            <div><img src="./img 120.jpg" alt=""></div>
+            <div><img src="./img 121.jpg" alt=""></div>
+            <div><img src="./img 122.jpg" alt=""></div>
+            <div><img src="./img 123.jpg" alt=""></div>
+            <div><img src="./img 124.jpg" alt=""></div>
+            <div><img src="./img 125.jpg" alt=""></div>
+            <div><img src="./img 126.jpg" alt=""></div>
+            <div><img src="./img 127.jpg" alt=""></div>
+            <div><img src="./img 128.jpg" alt=""></div>
+            <div><img src="./img 129.jpg" alt=""></div>
+            <div><img src="./img 130.jpg" alt=""></div>
+            <div><img src="./img 131.jpg" alt=""></div>
+            <div><img src="./img 132.jpg" alt=""></div>
+            <div><img src="./img 133.jpg" alt=""></div>
+            <div><img src="./img 134.jpg" alt=""></div>
+            <div><img src="./img 135.jpg" alt=""></div>
+            <div><img src="./img 136.jpg" alt=""></div>
+            <div><img src="./img 137.jpg" alt=""></div>
+            <div><img src="./img 138.jpg" alt=""></div>
+            <div><img src="./img 139.jpg" alt=""></div>
+            <div><img src="./img 140.jpg" alt=""></div>
+            <div><img src="./img 141.jpg" alt=""></div>
+            <div><img src="./img 142.jpg" alt=""></div>
+            <div><img src="./img 143.jpg" alt=""></div>
+            <div><img src="./img 144.jpg" alt=""></div>
+            <div><img src="./img 145.jpg" alt=""></div>
+            <div><img src="./img 146.jpg" alt=""></div>
+            <div><img src="./img 147.jpg" alt=""></div>
+            <div><img src="./img 148.jpg" alt=""></div>
+            <div><img src="./img 149.jpg" alt=""></div>
+            <div><img src="./img 150.jpg" alt=""></div>
+            <div><img src="./img 151.jpg" alt=""></div>
+            <div><img src="./img 152.jpg" alt=""></div>
+            <div><img src="./img 153.jpg" alt=""></div>
+            <div><img src="./img 154.jpg" alt=""></div>
+            <div><img src="./img 155.jpg" alt=""></div>
+            <div><img src="./img 156.jpg" alt=""></div>
+            <div><img src="./img 157.jpg" alt=""></div>
+            <div><img src="./img 158.jpg" alt=""></div>
+            <div><img src="./img 159.jpg" alt=""></div>
+            <div><img src="./img 160.jpg" alt=""></div>
+            <div><img src="./img 161.jpg" alt=""></div>
+            <div><img src="./img 162.jpg" alt=""></div>
+            <div><img src="./img 163.jpg" alt=""></div>
+            <div><img src="./img 164.jpg" alt=""></div>
+            <div><img src="./img 165.jpg" alt=""></div>
+            <div><img src="./img 166.jpg" alt=""></div>
+            <div><img src="./img 167.jpg" alt=""></div>
+            <div><img src="./img 168.jpg" alt=""></div>
+            <div><img src="./img 169.jpg" alt=""></div>
+            <div><img src="./img 170.jpg" alt=""></div>
+            <div><img src="./img 171.jpg" alt=""></div>
+            <div><img src="./img 172.jpg" alt=""></div>
+            <div><img src="./img 173.jpg" alt=""></div>
+            <div><img src="./img 174.jpg" alt=""></div>
+            <div><img src="./img 175.jpg" alt=""></div>
+            <div><img src="./img 176.jpg" alt=""></div>
+            <div><img src="./img 177.jpg" alt=""></div>
+            <div><img src="./img 178.jpg" alt=""></div>
+            <div><img src="./img 179.jpg" alt=""></div>
+            <div><img src="./img 180.jpg" alt=""></div>
+            <div><img src="./img 181.jpg" alt=""></div>
+            <div><img src="./img 182.jpg" alt=""></div>
+            <div><img src="./img 183.jpg" alt=""></div>
+            <div><img src="./img 184.jpg" alt=""></div>
+            <div><img src="./img 185.jpg" alt=""></div>
+            <div><img src="./img 186.jpg" alt=""></div>
+            <div><img src="./img 187.jpg" alt=""></div>
+            <div><img src="./img 188.jpg" alt=""></div>
+            <div><img src="./img 189.jpg" alt=""></div>
+            <div><img src="./img 190.jpg" alt=""></div>
+            <div><img src="./img 191.jpg" alt=""></div>
+            <div><img src="./img 192.jpg" alt=""></div>
+            <div><img src="./img 193.jpg" alt=""></div>
+            <div><img src="./img 194.jpg" alt=""></div>
+            <div><img src="./img 195.jpg" alt=""></div>
+            <div><img src="./img 196.jpg" alt=""></div>
+            <div><img src="./img 197.jpg" alt=""></div>
         <div>
             <img src="./img 198.jpg" alt="">
         </div>
