--- a/women.html
+++ b/women.html
@@ -1,19 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Women's Section</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+        }
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        .gallery div {
+            margin: 10px;
+        }
+        .gallery img {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
-
 <body>
-    <div class="shop-now-interface" id="shop-now-interface">
-        <!-- Women-specific content here -->
+    <div class="container">
         <h1>Welcome to the Women's Section!</h1>
         <p>Explore our collection for women.</p>
-    </div>
+        <div class="gallery">
            <div>
         <img src="./img 1.jpg" alt="">
                  <p>Woman shoes category 
