--- a/women.html
+++ b/women.html
@@ -84,10 +84,7 @@
                             </div>
                             <div>
                                 <img src="./img 10.jpg" alt="">
-                                <p> *《AIMAL Vol#01-2024 Lawn Collection》* 
- 
- *•◇•By ``GJ FASHION ``  Luxury Lawn Digital Printed Shirt &  Luxury  Digital Printed PURE LAWN LINING Duppta & Cambric Cotton Trouser•◇•*available on wholesale rate 
-                                contact us on WhatsApp for placing your order</p>
+                                
                             </div>
                             <div>
                                 <img src="./img 11.jpg" alt="">
@@ -95,6 +92,10 @@
                             <div>
                                 <img src="./img 12.jpg" alt="">
                             </div>
+        <p>*《AIMAL Vol#01-2024 Lawn Collection》* 
+ 
+ *•◇•By ``GJ FASHION ``  Luxury Lawn Digital Printed Shirt &  Luxury  Digital Printed PURE LAWN LINING Duppta & Cambric Cotton Trouser•◇•*
+        available on wholesale rate contact us on WhatsApp</p>
                             <div>
                                 <img src="./img 13.jpg" alt="">
                             </div>
