--- a/women.html
+++ b/women.html
@@ -126,6 +126,11 @@
                             <div>
                                 <img src="./img 22.jpg" alt="">
                             </div>
+        </p>《ZAYA Vol#01-2024 Lawn Collection》
+ 
+ *•◇•By ``GJ FASHION ``  Luxury Lawn Digital Printed Shirt &  Luxury  Digital Printed BAMBER CHIFFON Duppta & Cambric Cotton Trouser•◇• 
+            contact us on WhatsApp for placing your order 
+         +923089885436</p>
                             <div>
                                 <img src="./img 23.jpg" alt="">
                             </div>
